Thêm admin layout

--- a/templates/admin/manage_admins.html
+++ b/templates/admin/manage_admins.html
@@ -58,7 +58,7 @@
                                     </a>
                                     <button type="button" 
                                             class="btn btn-sm btn-danger"
-                                            onclick="confirmDelete({{ admin.id }})">
+                                            onclick="confirmDelete('{{ admin.id }}')">
                                         <i class="bi bi-trash"></i>
                                     </button>
                                 </div>
